# deadbeef-xsf-plugin

./: .gitignore  .gitmodules  Makefile  Makefile.am  cxsf.cpp
