AUTOMAKE_OPTIONS = subdir-objects

if HAVE_XSF

xsfpath = @top_srcdir@/plugins/xsf

xsfdir = $(libdir)/$(PACKAGE)

pkglib_LTLIBRARIES = xsf.la


xsf_la_SOURCES = cxsf.cpp\
	Highly_Experimental/Core/bios.c\
	Highly_Experimental/Core/iop.c\
	Highly_Experimental/Core/ioptimer.c\
	Highly_Experimental/Core/psx.c\
	Highly_Experimental/Core/r3000.c\
	Highly_Experimental/Core/spu.c\
	Highly_Experimental/Core/spucore.c\
	Highly_Experimental/Core/vfs.c\
	Highly_Quixotic/Core/kabuki.c\
	Highly_Quixotic/Core/qsound.c\
	Highly_Quixotic/Core/qsound_ctr.c\
	Highly_Quixotic/Core/z80.c\
	Highly_Theoretical/Core/arm.c\
	Highly_Theoretical/Core/dcsound.c\
	Highly_Theoretical/Core/m68k/m68kcpu.c\
	Highly_Theoretical/Core/m68k/m68kops.c\
	Highly_Theoretical/Core/satsound.c\
	Highly_Theoretical/Core/sega.c\
	Highly_Theoretical/Core/yam.c\
	lazyusf2/ai/ai_controller.c\
	lazyusf2/api/callbacks.c\
	lazyusf2/main/main.c\
	lazyusf2/main/rom.c\
	lazyusf2/main/savestates.c\
	lazyusf2/main/util.c\
	lazyusf2/memory/memory.c\
	lazyusf2/pi/cart_rom.c\
	lazyusf2/pi/pi_controller.c\
	lazyusf2/r4300/cached_interp.c\
	lazyusf2/r4300/cp0.c\
	lazyusf2/r4300/cp1.c\
	lazyusf2/r4300/empty_dynarec.c\
	lazyusf2/r4300/exception.c\
	lazyusf2/r4300/instr_counters.c\
	lazyusf2/r4300/interupt.c\
	lazyusf2/r4300/mi_controller.c\
	lazyusf2/r4300/pure_interp.c\
	lazyusf2/r4300/r4300.c\
	lazyusf2/r4300/r4300_core.c\
	lazyusf2/r4300/recomp.c\
	lazyusf2/r4300/reset.c\
	lazyusf2/r4300/tlb.c\
	lazyusf2/rdp/rdp_core.c\
	lazyusf2/ri/rdram.c\
	lazyusf2/ri/rdram_detection_hack.c\
	lazyusf2/ri/ri_controller.c\
	lazyusf2/rsp/rsp_core.c\
	lazyusf2/rsp_hle/alist.c\
	lazyusf2/rsp_hle/alist_audio.c\
	lazyusf2/rsp_hle/alist_naudio.c\
	lazyusf2/rsp_hle/alist_nead.c\
	lazyusf2/rsp_hle/audio.c\
	lazyusf2/rsp_hle/cicx105.c\
	lazyusf2/rsp_hle/hle.c\
	lazyusf2/rsp_hle/jpeg.c\
	lazyusf2/rsp_hle/memory.c\
	lazyusf2/rsp_hle/mp3.c\
	lazyusf2/rsp_hle/musyx.c\
	lazyusf2/rsp_hle/plugin.c\
	lazyusf2/rsp_lle/rsp.c\
	lazyusf2/si/cic.c\
	lazyusf2/si/game_controller.c\
	lazyusf2/si/n64_cic_nus_6105.c\
	lazyusf2/si/pif.c\
	lazyusf2/si/si_controller.c\
	lazyusf2/usf/barray.c\
	lazyusf2/usf/resampler.c\
	lazyusf2/usf/usf.c\
	lazyusf2/vi/vi_controller.c\
	psflib/psf2fs.c\
	psflib/psflib.c\
	vio2sf/src/vio2sf/desmume/arm_instructions.c\
	vio2sf/src/vio2sf/desmume/armcpu.c\
	vio2sf/src/vio2sf/desmume/barray.c\
	vio2sf/src/vio2sf/desmume/bios.c\
	vio2sf/src/vio2sf/desmume/cp15.c\
	vio2sf/src/vio2sf/desmume/FIFO.c\
	vio2sf/src/vio2sf/desmume/GPU.c\
	vio2sf/src/vio2sf/desmume/isqrt.c\
	vio2sf/src/vio2sf/desmume/matrix.c\
	vio2sf/src/vio2sf/desmume/mc.c\
	vio2sf/src/vio2sf/desmume/MMU.c\
	vio2sf/src/vio2sf/desmume/NDSSystem.c\
	vio2sf/src/vio2sf/desmume/resampler.c\
	vio2sf/src/vio2sf/desmume/SPU.cpp\
	vio2sf/src/vio2sf/desmume/state.c\
	vio2sf/src/vio2sf/desmume/thumb_instructions.c\
	viogsf/vbam/apu/Blip_Buffer.cpp\
	viogsf/vbam/apu/Effects_Buffer.cpp\
	viogsf/vbam/apu/Gb_Apu.cpp\
	viogsf/vbam/apu/Gb_Oscs.cpp\
	viogsf/vbam/apu/Multi_Buffer.cpp\
	viogsf/vbam/gba/bios.cpp\
	viogsf/vbam/gba/GBA-arm.cpp\
	viogsf/vbam/gba/GBA-thumb.cpp\
	viogsf/vbam/gba/GBA.cpp\
	viogsf/vbam/gba/Sound.cpp\
	hebios.h\
	Highly_Experimental/Core/bios.h\
	Highly_Experimental/Core/emuconfig.h\
	Highly_Experimental/Core/iop.h\
	Highly_Experimental/Core/ioptimer.h\
	Highly_Experimental/Core/psx.h\
	Highly_Experimental/Core/r3000.h\
	Highly_Experimental/Core/spu.h\
	Highly_Experimental/Core/spucore.h\
	Highly_Experimental/Core/vfs.h\
	Highly_Quixotic/Core/emuconfig.h\
	Highly_Quixotic/Core/kabuki.h\
	Highly_Quixotic/Core/qsound.h\
	Highly_Quixotic/Core/qsound_ctr.h\
	Highly_Quixotic/Core/z80.h\
	Highly_Theoretical/Core/arm.h\
	Highly_Theoretical/Core/dcsound.h\
	Highly_Theoretical/Core/emuconfig.h\
	Highly_Theoretical/Core/m68k/m68k.h\
	Highly_Theoretical/Core/m68k/m68kconf.h\
	Highly_Theoretical/Core/m68k/m68kcpu.h\
	Highly_Theoretical/Core/m68k/m68kops.h\
	Highly_Theoretical/Core/m68k/macros.h\
	Highly_Theoretical/Core/satsound.h\
	Highly_Theoretical/Core/sega.h\
	Highly_Theoretical/Core/yam.h\
	lazyusf2/ai/ai_controller.h\
	lazyusf2/api/callbacks.h\
	lazyusf2/api/m64p_common.h\
	lazyusf2/api/m64p_config.h\
	lazyusf2/api/m64p_debugger.h\
	lazyusf2/api/m64p_frontend.h\
	lazyusf2/api/m64p_plugin.h\
	lazyusf2/api/m64p_types.h\
	lazyusf2/api/m64p_vidext.h\
	lazyusf2/debugger/dbg_decoder.h\
	lazyusf2/debugger/dbg_decoder_local.h\
	lazyusf2/debugger/dbg_types.h\
	lazyusf2/main/list.h\
	lazyusf2/main/main.h\
	lazyusf2/main/rom.h\
	lazyusf2/main/savestates.h\
	lazyusf2/main/util.h\
	lazyusf2/main/version.h\
	lazyusf2/memory/memory.h\
	lazyusf2/osal/preproc.h\
	lazyusf2/pi/cart_rom.h\
	lazyusf2/pi/pi_controller.h\
	lazyusf2/r4300/cached_interp.h\
	lazyusf2/r4300/cp0.h\
	lazyusf2/r4300/cp1.h\
	lazyusf2/r4300/exception.h\
	lazyusf2/r4300/fpu.h\
	lazyusf2/r4300/instr_counters.h\
	lazyusf2/r4300/interupt.h\
	lazyusf2/r4300/macros.h\
	lazyusf2/r4300/mi_controller.h\
	lazyusf2/r4300/ops.h\
	lazyusf2/r4300/pure_interp.h\
	lazyusf2/r4300/r4300.h\
	lazyusf2/r4300/r4300_core.h\
	lazyusf2/r4300/recomp.h\
	lazyusf2/r4300/recomph.h\
	lazyusf2/r4300/reset.h\
	lazyusf2/r4300/tlb.h\
	lazyusf2/rdp/rdp_core.h\
	lazyusf2/ri/rdram.h\
	lazyusf2/ri/rdram_detection_hack.h\
	lazyusf2/ri/ri_controller.h\
	lazyusf2/rsp/rsp_core.h\
	lazyusf2/rsp_hle/alist.h\
	lazyusf2/rsp_hle/arithmetics.h\
	lazyusf2/rsp_hle/audio.h\
	lazyusf2/rsp_hle/common.h\
	lazyusf2/rsp_hle/hle.h\
	lazyusf2/rsp_hle/hle_external.h\
	lazyusf2/rsp_hle/hle_internal.h\
	lazyusf2/rsp_hle/memory.h\
	lazyusf2/rsp_hle/ucodes.h\
	lazyusf2/rsp_lle/config.h\
	lazyusf2/rsp_lle/execute.h\
	lazyusf2/rsp_lle/matrix.h\
	lazyusf2/rsp_lle/rsp.h\
	lazyusf2/rsp_lle/rsp_lle.h\
	lazyusf2/rsp_lle/su.h\
	lazyusf2/rsp_lle/vu/cf.h\
	lazyusf2/rsp_lle/vu/clamp.h\
	lazyusf2/rsp_lle/vu/divrom.h\
	lazyusf2/rsp_lle/vu/shuffle.h\
	lazyusf2/rsp_lle/vu/vabs.h\
	lazyusf2/rsp_lle/vu/vadd.h\
	lazyusf2/rsp_lle/vu/vaddc.h\
	lazyusf2/rsp_lle/vu/vand.h\
	lazyusf2/rsp_lle/vu/vch.h\
	lazyusf2/rsp_lle/vu/vcl.h\
	lazyusf2/rsp_lle/vu/vcr.h\
	lazyusf2/rsp_lle/vu/veq.h\
	lazyusf2/rsp_lle/vu/vge.h\
	lazyusf2/rsp_lle/vu/vlt.h\
	lazyusf2/rsp_lle/vu/vmacf.h\
	lazyusf2/rsp_lle/vu/vmacq.h\
	lazyusf2/rsp_lle/vu/vmacu.h\
	lazyusf2/rsp_lle/vu/vmadh.h\
	lazyusf2/rsp_lle/vu/vmadl.h\
	lazyusf2/rsp_lle/vu/vmadm.h\
	lazyusf2/rsp_lle/vu/vmadn.h\
	lazyusf2/rsp_lle/vu/vmov.h\
	lazyusf2/rsp_lle/vu/vmrg.h\
	lazyusf2/rsp_lle/vu/vmudh.h\
	lazyusf2/rsp_lle/vu/vmudl.h\
	lazyusf2/rsp_lle/vu/vmudm.h\
	lazyusf2/rsp_lle/vu/vmudn.h\
	lazyusf2/rsp_lle/vu/vmulf.h\
	lazyusf2/rsp_lle/vu/vmulu.h\
	lazyusf2/rsp_lle/vu/vnand.h\
	lazyusf2/rsp_lle/vu/vne.h\
	lazyusf2/rsp_lle/vu/vnop.h\
	lazyusf2/rsp_lle/vu/vnor.h\
	lazyusf2/rsp_lle/vu/vnxor.h\
	lazyusf2/rsp_lle/vu/vor.h\
	lazyusf2/rsp_lle/vu/vrcp.h\
	lazyusf2/rsp_lle/vu/vrcph.h\
	lazyusf2/rsp_lle/vu/vrcpl.h\
	lazyusf2/rsp_lle/vu/vrsq.h\
	lazyusf2/rsp_lle/vu/vrsqh.h\
	lazyusf2/rsp_lle/vu/vrsql.h\
	lazyusf2/rsp_lle/vu/vsaw.h\
	lazyusf2/rsp_lle/vu/vsub.h\
	lazyusf2/rsp_lle/vu/vsubc.h\
	lazyusf2/rsp_lle/vu/vu.h\
	lazyusf2/rsp_lle/vu/vxor.h\
	lazyusf2/si/cic.h\
	lazyusf2/si/game_controller.h\
	lazyusf2/si/n64_cic_nus_6105.h\
	lazyusf2/si/pif.h\
	lazyusf2/si/si_controller.h\
	lazyusf2/usf/barray.h\
	lazyusf2/usf/resampler.h\
	lazyusf2/usf/usf.h\
	lazyusf2/usf/usf_internal.h\
	lazyusf2/vi/vi_controller.h\
	psflib/psf2fs.h\
	psflib/psflib.h\
	vio2sf/src/vio2sf/desmume/ARM9.h\
	vio2sf/src/vio2sf/desmume/arm_instructions.h\
	vio2sf/src/vio2sf/desmume/armcpu.h\
	vio2sf/src/vio2sf/desmume/barray.h\
	vio2sf/src/vio2sf/desmume/bios.h\
	vio2sf/src/vio2sf/desmume/bits.h\
	vio2sf/src/vio2sf/desmume/config.h\
	vio2sf/src/vio2sf/desmume/cp15.h\
	vio2sf/src/vio2sf/desmume/debug.h\
	vio2sf/src/vio2sf/desmume/dscard.h\
	vio2sf/src/vio2sf/desmume/FIFO.h\
	vio2sf/src/vio2sf/desmume/GPU.h\
	vio2sf/src/vio2sf/desmume/isqrt.h\
	vio2sf/src/vio2sf/desmume/matrix.h\
	vio2sf/src/vio2sf/desmume/mc.h\
	vio2sf/src/vio2sf/desmume/mem.h\
	vio2sf/src/vio2sf/desmume/MMU.h\
	vio2sf/src/vio2sf/desmume/NDSSystem.h\
	vio2sf/src/vio2sf/desmume/registers.h\
	vio2sf/src/vio2sf/desmume/resampler.h\
	vio2sf/src/vio2sf/desmume/SPU.h\
	vio2sf/src/vio2sf/desmume/spu_exports.h\
	vio2sf/src/vio2sf/desmume/state.h\
	vio2sf/src/vio2sf/desmume/thumb_instructions.h\
	vio2sf/src/vio2sf/desmume/types.h\
	viogsf/vbam/apu/blargg_common.h\
	viogsf/vbam/apu/blargg_config.h\
	viogsf/vbam/apu/blargg_source.h\
	viogsf/vbam/apu/Blip_Buffer.h\
	viogsf/vbam/apu/Effects_Buffer.h\
	viogsf/vbam/apu/Gb_Apu.h\
	viogsf/vbam/apu/Gb_Oscs.h\
	viogsf/vbam/apu/Multi_Buffer.h\
	viogsf/vbam/common/Port.h\
	viogsf/vbam/common/Types.h\
	viogsf/vbam/gba/bios.h\
	viogsf/vbam/gba/GBA.h\
	viogsf/vbam/gba/GBAcpu.h\
	viogsf/vbam/gba/GBAinline.h\
	viogsf/vbam/gba/Globals.h\
	viogsf/vbam/gba/Sound.h

xsf_la_LDFLAGS = -module -avoid-version
xsf_la_LIBADD = $(ZLIB_LIBS)

AM_CFLAGS = $(CFLAGS) $(ZLIB_CFLAGS) -I$(xsfpath)/lazyusf2 -std=c99 -DEMU_COMPILE -DEMU_LITTLE_ENDIAN -DLSB_FIRST -DUSE_M68K -DARCH_MIN_SSE2
AM_CPPFLAGS = $(CXXFLAGS) -fno-exceptions -fno-rtti -fno-unwind-tables -DEMU_COMPILE -DEMU_LITTLE_ENDIAN -DLSB_FIRST -DUSE_M68K -DARCH_MIN_SSE2
endif
